# pipc

./: .env.example  .gitignore  NEXT_SESSION.md  README.md  index.html  plan.md  pyproject.toml
.github/workflows/: pages.yml
data/processed/: failed_decisions.csv  list.csv  list.parquet
reports/: analysis_plan.md  deep_quant_analysis_plan.md  eda.md  external_issue_scan.md  global_issues.html  index.html  insights.md  style.css
reports/cluster_full_html/: cluster_00.html  cluster_01.html  cluster_02.html  cluster_03.html  cluster_04.html  cluster_05.html  cluster_06.html  cluster_07.html  cluster_08.html  cluster_09.html  cluster_10.html  cluster_11.html  cluster_12.html  cluster_13.html  cluster_14.html  cluster_15.html  cluster_16.html  cluster_17.html  index.html
reports/deep_quant/: index.html
reports/full_html/: data_provision.html  data_quality.html  enforcement.html  index.html  interpretation_other.html  overview.html  privacy_impact.html  public_system.html  style.css
reports/html/: data_provision.html  data_quality.html  enforcement.html  index.html  interpretation_other.html  overview.html  privacy_impact.html  public_system.html  style.css
reports/issues/: index.html  issue_01.html  issue_02.html  issue_03.html  issue_04.html  issue_05.html  issue_06.html  issue_07.html  issue_08.html  issue_09.html  issue_10.html  issue_11.html
reports/tables/: article_by_category.csv  article_counts.csv  category_length_summary.csv  category_missing_rates.csv  citation_index.csv  data_request_applicants.csv  factor_counts.csv  (+25 more)
tests/: test_parse_labels.py
(+4182 files in other folders)
