[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipc"
version = "0.1.0"
description = "Collect and analyze Korean PIPC decisions from law.go.kr."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "pyarrow>=14.0",
  "matplotlib>=3.8",
  "scikit-learn>=1.3",
  "umap-learn>=0.5.6",
  "hdbscan>=0.8.33",
]

[project.optional-dependencies]
rag = [
  "sentence-transformers>=2.7",
  "faiss-cpu>=1.8",
]
dev = [
  "pytest>=8.0",
]

[project.scripts]
pipc = "pipc.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
